un-breaking code

--- a/about.html
+++ b/about.html
@@ -9,4 +9,6 @@
         <title>Kiwitech About</title>
     </head>
     <body>
-        <h1>Kiwitech About Page</h1>
+        <h1>Kiwitech About</h1>
+    </body>
+</html>
