Added About section

--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
             <br>
             Wellington
         </p>
+        <p>
+            <a href="about.html" id="pagelink">About Page</a>
+        </p>
     </body>
 </html>
