--- a/about.html
+++ b/about.html
@@ -10,5 +10,8 @@
     </head>
     <body>
         <h1>Kiwitech About</h1>
+        <p>
+            KiwiTech Solutions is a growing New Zealand tech support company that provides IT services to branches in Auckland, Wellington, and Christchurch.
+        </p>
     </body>
 </html>
