--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
         <p>
             <a href="about.html" id="pagelink">About Page</a>
         </p>
+        <p>
+            This is a change to the live main page
+        </p>
     </body>
 </html>
