--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Kiwitech</title>
     </head>
     <body>
-        <h1>Hiwitech Homepage</h1>
+        <h1>Kiwitech Homepage</h1>
         <p>Welcome to the Kiwitech Homepage</p>
         <br>
         <p>Available branches:</p>
@@ -22,9 +22,6 @@
         </p>
         <p>
             <a href="about.html" id="pagelink">About Page</a>
-        </p>
-        <p>
-            This is a change to the live main page
         </p>
     </body>
 </html>
